# EldRingPresence

./: README.md  package.json  vite.config.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  memory.rs  utils.rs
src-tauri/src/commands/: discord.rs  game.rs  listener.rs  mod.rs
src-tauri/src/constants/: mod.rs  offsets.rs
src-tauri/src/discord/: client.rs
src-tauri/src/logic/: attributes.rs  coordinates.rs  mod.rs  players.rs  resistances.rs
src-tauri/src/models/: config.rs  response.rs
src/hooks/: game.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/types/: core.type.ts  game.type.ts
